<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/addMeeting_activity_scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@android:color/white">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rootView_addMeeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_perimeter"
        tools:context=".controllers.activities.AddMeetingActivity">

        <TextView
            android:id="@+id/textView_addMeeting_activity_newMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_perimeter"
            android:text="@string/new_meeting"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_addMeeting_activity_meetingName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_perimeter"
            android:layout_marginTop="@dimen/margin_perimeter"
            android:layout_marginEnd="@dimen/margin_perimeter"
            android:background="@drawable/bg_edittext"
            android:hint="@string/meeting_s_name"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="@dimen/overallTextSize"
            app:layout_constraintTop_toBottomOf="@id/textView_addMeeting_activity_newMeeting" />

        <TextView
            android:id="@+id/textView_addMeeting_activity_beginAt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_perimeter"
            android:layout_marginTop="@dimen/margintop_edittext"
            android:layout_marginEnd="@dimen/margin_perimeter"
            android:text="@string/begin_at"
            android:textColor="@android:color/black"
            android:textSize="@dimen/overallTextSize"
            app:layout_constraintStart_toStartOf="@id/editText_addMeeting_activity_meetingName"
            app:layout_constraintTop_toBottomOf="@id/editText_addMeeting_activity_meetingName" />

        <TextView
            android:id="@+id/textView_addMeeting_activity_dateBegin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_edittext"
            android:hint="01/01/2020"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textColorHint="@android:color/black"
            android:textSize="@dimen/overallTextSize"
            app:layout_constraintStart_toStartOf="@id/editText_addMeeting_activity_meetingName"
            app:layout_constraintTop_toBottomOf="@id/textView_addMeeting_activity_beginAt"
            app:layout_constraintWidth_percent="0.37"
            android:clickable="true"/>

        <TextView
            android:id="@+id/textView_addMeeting_activity_timeBegin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:hint="11:00"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textColorHint="@android:color/black"
            android:textSize="@dimen/overallTextSize"
            app:layout_constraintBottom_toBottomOf="@id/textView_addMeeting_activity_dateBegin"
            app:layout_constraintEnd_toEndOf="@id/editText_addMeeting_activity_meetingName"
            app:layout_constraintTop_toTopOf="@id/textView_addMeeting_activity_dateBegin"
            app:layout_constraintWidth_percent="0.37" />

        <TextView
            android:id="@+id/textView_addMeeting_activity_EndAt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_perimeter"
            android:layout_marginTop="@dimen/margintop_edittext"
            android:layout_marginEnd="@dimen/margin_perimeter"
            android:text="End at"
            android:textColor="@android:color/black"
            android:textSize="@dimen/overallTextSize"
            app:layout_constraintStart_toStartOf="@id/editText_addMeeting_activity_meetingName"
            app:layout_constraintTop_toBottomOf="@id/textView_addMeeting_activity_dateBegin" />

        <TextView
            android:id="@+id/textView_addMeeting_activity_dateEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_edittext"
            android:hint="01/01/2020"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textColorHint="@android:color/black"
            android:textSize="@dimen/overallTextSize"
            app:layout_constraintStart_toStartOf="@id/editText_addMeeting_activity_meetingName"
            app:layout_constraintTop_toBottomOf="@id/textView_addMeeting_activity_EndAt"
            app:layout_constraintWidth_percent="0.37" />

        <TextView
            android:id="@+id/textView_addMeeting_activity_timeEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:hint="12:00"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="@dimen/overallTextSize"
            app:layout_constraintBottom_toBottomOf="@id/textView_addMeeting_activity_dateEnd"
            app:layout_constraintEnd_toEndOf="@id/editText_addMeeting_activity_meetingName"
            app:layout_constraintTop_toTopOf="@id/textView_addMeeting_activity_dateEnd"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.37" />

        <TextView
            android:id="@+id/textView_addMeeting_activity_meetingRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_perimeter"
            android:layout_marginTop="@dimen/margintop_edittext"
            android:layout_marginEnd="@dimen/margin_perimeter"
            android:text="Meeting Room"
            android:textColor="@android:color/black"
            android:textSize="@dimen/overallTextSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_addMeeting_activity_dateEnd" />

        <Spinner
            android:id="@+id/spinner_addMeeting_activity_meetingRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_perimeter"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/margin_perimeter"
            android:background="@drawable/bg_edittext"
            app:layout_constraintTop_toBottomOf="@id/textView_addMeeting_activity_meetingRoom" />

        <TextView
            android:id="@+id/textView_addMeeting_activity_listOfParticipants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_perimeter"
            android:layout_marginTop="@dimen/margintop_edittext"
            android:layout_marginEnd="@dimen/margin_perimeter"
            android:text="List of Participants"
            android:textColor="@android:color/black"
            android:textSize="@dimen/overallTextSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_addMeeting_activity_meetingRoom" />

        <ImageButton
            android:id="@+id/imageButton_addMeeting_activity_addParticipant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:contentDescription="@string/icon_for_add_a_participant"
            android:src="@drawable/baseline_person_add_black_24"
            app:layout_constraintBottom_toBottomOf="@id/textView_addMeeting_activity_listOfParticipants"
            app:layout_constraintStart_toEndOf="@id/imageButton_addMeeting_activity_emptyParticipantList"
            app:layout_constraintTop_toTopOf="@id/textView_addMeeting_activity_listOfParticipants" />

        <TextView
            android:id="@+id/textView_addMeeting_activity_theListOfParticipants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_perimeter"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/margin_perimeter"
            android:background="@drawable/bg_edittext"
            android:hint="No participant"
            android:autoLink="email"
            android:textColor="@android:color/black"
            android:textSize="@dimen/overallTextSize"
            android:textColorLink="@color/textColorLink"
            app:layout_constraintTop_toBottomOf="@id/textView_addMeeting_activity_listOfParticipants" />

        <ImageButton
            android:id="@+id/imageButton_addMeeting_activity_addMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_perimeter"
            android:background="@drawable/bg_circle_add_meeting"
            android:src="@drawable/baseline_playlist_add_black_36"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/textView_addMeeting_activity_theListOfParticipants"
            app:layout_constraintStart_toStartOf="@id/textView_addMeeting_activity_theListOfParticipants"
            app:layout_constraintTop_toBottomOf="@id/textView_addMeeting_activity_theListOfParticipants" />

        <ImageButton
            android:id="@+id/imageButton_addMeeting_activity_emptyParticipantList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/textView_addMeeting_activity_listOfParticipants"
            android:layout_marginStart="@dimen/item_margin"
            app:layout_constraintTop_toTopOf="@+id/imageButton_addMeeting_activity_addParticipant"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton_addMeeting_activity_addParticipant"
            android:src="@drawable/sharp_delete_forever_black_24"
            android:background="@null" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
