<resources>
    <string name="app_name">Mareu</string>
    <string name="icon_for_meeting_name">Icon for Meeting name</string>
    <string name="icon_for_meeting_room">Icon for Meeting Room</string>
    <string name="icon_for_the_number_of_participants">Icon for the Number of Participants</string>
    <string name="icon_button_for_remove_meeting">Icon button for remove Meeting</string>
    <string name="new_meeting">Please fill all fields</string>
    <string name="meeting_s_name">Meeting\'s name</string>
    <string name="icon_for_add_a_participant">Icon for add a Participant</string>
    <string name="begin_at">Begin at</string>
    <string name="alert_dialog_positive_button">Add</string>
    <string name="alert_dialog_negative_button">Cancel</string>
    <string name="item_filter">Filter</string>
    <string name="fragment_filter_textview_beginningdate">Beginning the</string>
    <string name="fragment_filter_textview_endingdate">Ending the</string>
    <string name="fragment_filter_title">By date range OR Meeting Room</string>
    <string name="fragment_filter_pickMeeting">Pick a Meeting Room…</string>
    <string name="pick_date_filter">Please pick a beginning and ending date</string>
    <string name="date_picking_error">The beginning date cannot be after the ending date</string>
    <string name="activity_main_textView_noMeeting">No Meeting available,\nWould you like to add some ?</string>
    <string name="meeting_added">added !</string>
    <string name="add_meeting_error">Something was wrong, please check fields…</string>
</resources>